feature_applications (#2)
* implement applications 3rd iteration

* fix decided at

* small fix

* implement approve application

* implement approve application
